--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "node server.js",
     "local": "node local.js",
-    "start": "node server.js"
+    "start": "node local.js -s leevpn.herokuapp.com -l 1080 -m aes-256-cfb -k woshilixiang -p 80"
   },
   "repository": {
     "type": "git",
